super clean - pradeep

--- a/HR/static/ngTemplates/app.HR.form.userProfile.html
+++ b/HR/static/ngTemplates/app.HR.form.userProfile.html
@@ -85,25 +85,25 @@
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
-                <label>localAddressStreet</label>
+                <label>Local Address Street</label>
                 <input type="text" class="form-control" ng-model="data.localAddressStreet" placeholder="localAddressStreet">
               </div>
               <div class="form-group">
-                <label>localAddressCity</label>
+                <label>Local Address City</label>
                 <input type="text" class="form-control" ng-model="data.localAddressCity" placeholder="localAddressCity">
               </div>
               <div class="form-group">
-                <label>localAddressPin</label>
+                <label>Local Address Pin</label>
                 <input type="number" class="form-control" ng-model="data.localAddressPin" placeholder="localAddressPin">
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <label>localAddressState</label>
+                <label>Local Address State</label>
                 <input type="text" class="form-control" ng-model="data.localAddressState" placeholder="localAddressState">
               </div>
               <div class="form-group">
-                <label>localAddressCountry</label>
+                <label>Local Address Country</label>
                 <input type="text" class="form-control" ng-model="data.localAddressCountry" placeholder="localAddressCountry">
               </div>
             </div>
@@ -114,25 +114,25 @@
           <div class="row" ng-if="!data.sameAsLocal">
             <div class="col-md-6">
               <div class="form-group">
-                <label>permanentAddressStreet</label>
+                <label>Permanent Address Street</label>
                 <input type="text" class="form-control" ng-model="data.permanentAddressStreet" placeholder="permanentAddressStreet">
               </div>
               <div class="form-group">
-                <label>permanentAddressCity</label>
+                <label>Permanent Address City</label>
                 <input type="text" class="form-control" ng-model="data.permanentAddressCity" placeholder="permanentAddressCity">
               </div>
               <div class="form-group">
-                <label>permanentAddressPin</label>
+                <label>Permanent Address Pin</label>
                 <input type="number" class="form-control" ng-model="data.permanentAddressPin" placeholder="permanentAddressPin">
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <label>permanentAddressState</label>
+                <label>Permanent Address State</label>
                 <input type="text" class="form-control" ng-model="data.permanentAddressState" placeholder="permanentAddressState">
               </div>
               <div class="form-group">
-                <label>permanentAddressCountry</label>
+                <label>Permanent Address Country</label>
                 <input type="text" class="form-control" ng-model="data.permanentAddressCountry" placeholder="permanentAddressCountry">
               </div>
             </div>
@@ -427,9 +427,6 @@
             </div>
           </div>
         </div>
-
-
-
       </div>
     </div>
   </div>
