--- a/ecommerce/static/ngTemplates/app.ecommerce.list.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.list.html
@@ -35,7 +35,7 @@
           <div class="container-fluid" style="cursor:pointer;padding-right:5px;padding-left:5px" ng-click="$state.go('categories' , {name : g.name.split(' ').join('_')})">
             <div class="row">
               <div class=" card bg-white text-center" style="width: 100%;padding-bottom:0px;">
-                <div  style="padding-right:0px;padding-left:0px;overflow:hidden;width:100%;background: url('{{g.visual}}') no-repeat center center;background-size: cover;">
+                <div  style="padding-right:0px;padding-left:0px;overflow:hidden;width:200px;background: url('{{g.visual}}') no-repeat center center;background-size: cover;">
                 </div>
                 <div  style="padding-right:0px;padding-left:0px;overflow:hidden;height:280px;background: url('/static/images/ecommerce.jpg') no-repeat center center;background-size: cover;" ng-if="g.visual==null">
                 </div>
