--- a/ecommerce/static/ngTemplates/app.ecommerce.header.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.header.html
@@ -19,7 +19,7 @@
 
     <div class="col-xs-6 " >
         <div class="well shopByCatDiv" class="dropdown-toggle" style="padding-top:10px;margin-bottom:0px;" ng-mouseenter="onBtnEnter = true;resetAll()"  ng-mouseleave="onBtnEnter = false">
-          <span class="align-middle" style="color:var(--themeColor)">Shop By Category <i class="fa fa-caret-down"></i></span>
+          <span class="align-middle" style="color:var(--themeColor);font-size: 15px;">Shop By Category <i class="fa fa-caret-down"></i></span>
         </div>
         <div class="categoryDropDown" ng-show="onBtnEnter||onDropdownEnter||onChildEnter">
           <div class="well categoryMenu" ng-mouseenter="onDropdownEnter = true;"  ng-mouseleave="onDropdownEnter = false" style="{{onDropdownEnter||onChildEnter ?'border-right:none;border-radius:5px 0px 0px 5px;':'border-radius:5px;'}}">
