--- a/ecommerce/static/ngTemplates/app.ecommerce.FAQ.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.FAQ.html
@@ -8,15 +8,14 @@
 </div>
 <div class="row modal-body">
   <div class="container-fluid">
-    <div class="col-md-12 col-xs-12" style="padding-right:35px;border-right:1px solid #eeeeee;">
+    <div class="col-md-12 col-xs-12" >
       <h3>Top Queries</h3>
       <hr>
       <div class="row">
-        <div class="col-md-8">
-      <input type="text" class="form-control" placeholder="Search" ng-model="fAQue">
-    </div>
-
-      <div class="col-md-8">
+      <div class="col-md-12">
+        <input type="text" class="form-control" placeholder="Search" ng-model="fAQue">
+      </div>
+      <div class="col-md-12">
       <div class="row" ng-repeat="q in fAQ | filter:fAQue" style="padding-top:15px;font-size:18px;padding-left:15px">
         <span style="cursor:pointer" ng-click="collapsed($index)" ><strong>{{q.ques}}</strong></span>
         <div ng-if="$index==ind">
@@ -26,7 +25,5 @@
     </div>
     </div>
     </div>
-
-
   </div>
 </div>
