--- a/static_shared/ngTemplates/productCard.html
+++ b/static_shared/ngTemplates/productCard.html
@@ -19,7 +19,7 @@
         <div class="row container-fluid" style="padding:10px 20px;height:170px">
 
           <div>
-            <span ng-if="list.product.name.length<=18" style="margin:0px;  height:60px;padding-left:10px;font-size:17px;">{{list.product.name}}</span>
+            <span style="margin:0px;  height:60px;padding-left:10px;font-size:17px;">{{list.product.name}}</span>
           </div>
 
           <div style="height:40px;padding-left: 10px;padding-right: 10px;">
