--- a/static_shared/ngTemplates/productCard.html
+++ b/static_shared/ngTemplates/productCard.html
@@ -15,11 +15,12 @@
       </div>
     </div>
     <div class="row">
-      <div class=" card bg-white" style="padding-bottom:0px;">
+      <div class=" card bg-white">
         <div class="row container-fluid" style="padding:10px 20px;height:170px">
 
-          <div>
-            <span style="margin:0px;  height:60px;padding-left:10px;font-size:17px;">{{list.product.name}}</span>
+          <div style="height:60px">
+            <span style="margin:0px;font-size: 1.5rem;
+color: #666;">{{list.product.name}}</span>
           </div>
 
           <div style="height:40px;padding-left: 10px;padding-right: 10px;">
