--- a/static_shared/ngTemplates/productCard.html
+++ b/static_shared/ngTemplates/productCard.html
@@ -16,7 +16,7 @@
     </div>
     <div class="row">
       <div class=" card bg-white">
-        <div class="row container-fluid" style="padding:10px 20px;height:170px">
+        <div class="row container-fluid" style="padding:20px;height:170px;padding-top:0px;">
 
           <div style="height:60px">
             <span style="margin:0px;font-size: 1.5rem;
