--- a/POS/static/ngTemplates/app.POS.product.form.html
+++ b/POS/static/ngTemplates/app.POS.product.form.html
@@ -1,3 +1,5 @@
+
+<!-- <div ng-controller="controller.POS.productForm.modal"> -->
 <div class="modal-header">
   <span ng-if="mode == 'new'">Create a new Product</span>
   <span ng-if="mode == 'edit'">Edit product : {{product.name}}</span>
@@ -305,3 +307,4 @@
     </div>
   </div>
 </div>
+<!-- </div> -->
